Base UI + Highscore System

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Core/Bleuprint/SaveSystem/BP_CustomGameInstance.BP_CustomGameInstance_C
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Core/Bleuprint/BP_customGameMode.BP_customGameMode_C
