fix speed camera, shoot / rock

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Core/Bleuprint/SaveSystem/BP_CustomGameInstance.BP_CustomGameInstance_C
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/Core/Map/LVL_MainMenu.LVL_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Core/Bleuprint/BP_customGameMode.BP_customGameMode_C
 GlobalDefaultServerGameMode=None
