--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=E0B9A03C4D61855861E69B86D16664BA
+ProjectName=Himizu
+Description=A SHMUP game
+
